fix: Fix CSS element overlap

--- a/src/assets/stylesheets/extensions/_nav-multistep.scss
+++ b/src/assets/stylesheets/extensions/_nav-multistep.scss
@@ -61,7 +61,7 @@
             content: "";
             bottom: -0.5rem;
             left: 1.5rem;
-            z-index: 10;
+            z-index: 1;
           }
         }
       }
@@ -121,7 +121,7 @@
             content: "";
             position: absolute;
             right: -1rem;
-            z-index: 10;
+            z-index: 1;
           }
         }
 
